src/page/snapshots/xjtu_mealflow__page__analysis__test__render_merchant-2.snap
---
source: src/page/analysis.rs
expression: terminal.backend()
---
" Time Period   Time Series   Merchant   MerchantCategory                        "
"█▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀█"
"█ 啵啵鱼           15.51███                                                   ▲█" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
"█                                                                             ║█"
"█ 荷叶饼夹馍组     11.70█                                                     ║█" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " ")]
"█                                                                             ║█"
"█ 时光水吧         10.90                                                      ║█" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"█                                                                             ██"
"█ 凉皮饸络组       8.99                                                       ██" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " ")]
"█                                                                             ██"
"█ 西14西15东12浴室 8.57                                                       ██" Hidden by multi-width symbols: [(3, " "), (7, " "), (11, " "), (15, " "), (17, " ")]
"█                                                                             ██"
"█ 冒菜             4.87                                                       ██" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"█                                                                             ║█"
"█ 民族风味小吃     4.81                                                       ║█" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " ")]
"█                                                                             ▼█"
"█▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄█"
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ Last tab: h | Next Tab: l | Go back: esc                                     │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
