src/page/snapshots/xjtu_mealflow__page__analysis__test__render_merchant.snap
---
source: src/page/analysis.rs
expression: terminal.backend()
---
" Time Period   Time Series   Merchant                                           "
"█▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀█"
"█ 寿司             100.34████████████████████████████████████████████████████ ▲█" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"█                                                                             ██"
"█ 牛肉饭           59.75█████████████████████████████                         ██" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
"█                                                                             ██"
"█ 库迪咖啡         56.08███████████████████████████                           ██" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"█                                                                             ██"
"█ 梧桐美润水饺     31.35████████████                                          ██" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " ")]
"█                                                                             ║█"
"█ 梧晓桐便利店     20.30██████                                                ║█" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " ")]
"█                                                                             ║█"
"█ 啵啵鱼           15.51███                                                   ║█" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
"█                                                                             ║█"
"█ 荷叶饼夹馍组     11.70█                                                     ║█" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " ")]
"█                                                                             ▼█"
"█▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄█"
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ Last tab: h | Next Tab: l | Go back: esc                                     │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
