src/page/snapshots/xjtu_mealflow__page__analysis__test__render_merchant_category.snap
---
source: src/page/analysis.rs
expression: terminal.backend()
---
" Time Period   Time Series   Merchant   MerchantCategory                        "
"█▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀█"
"█ 食堂食物 19█████████████████████████████████████████████████████████████████ █" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"█                                                                              █"
"█ 食堂饮品 11████████████████████████████████████                              █" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"█                                                                              █"
"█ 超市     2██████                                                             █" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"█                                                                              █"
"█ 浴室     14███████████████████████████████████████████████                   █" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"█                                                                              █"
"█ 其他     0                                                                   █" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"█                                                                              █"
"█ 未知     0                                                                   █" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"█                                                                              █"
"█                                                                              █"
"█                                                                              █"
"█▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄█"
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ Last tab: h | Next Tab: l | Go back: esc                                     │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
