src/page/snapshots/xjtu_mealflow__page__analysis__test__render_time_period.snap
---
source: src/page/analysis.rs
expression: terminal.backend()
---
" Time Period   Time Series   Merchant                                           "
"█▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀█"
"█ Breakfast 4█████████████                                                     █"
"█                                                                              █"
"█ Lunch     13█████████████████████████████████████████████                    █"
"█                                                                              █"
"█ Dinner    18████████████████████████████████████████████████████████████████ █"
"█                                                                              █"
"█ Other     11██████████████████████████████████████                           █"
"█                                                                              █"
"█                                                                              █"
"█                                                                              █"
"█                                                                              █"
"█                                                                              █"
"█                                                                              █"
"█                                                                              █"
"█▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄█"
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ Last tab: h | Next Tab: l | Go back: esc                                     │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
