src/page/snapshots/xjtu_mealflow__page__analysis__test__render_time_series.snap
---
source: src/page/analysis.rs
expression: terminal.backend()
---
" Time Period   Time Series   Merchant   MerchantCategory                        "
"█▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀█"
"█                                                                 ███████      █"
"█                                                                 ███████      █"
"█                                                                 ███████      █"
"█                                                                 ███████      █"
"█                                                                 ███████      █"
"█                                                                 ███████      █"
"█                                                                 ███████      █"
"█                                                         ▂▂▂▂▂▂▂ ███████      █"
"█                                                         ███████ ███████      █"
"█                                                         ███████ ███████      █"
"█ ▄▄▄▄▄▄▄                                                 ███████ ███████      █"
"█ ███████                                                 ███████ ███████      █"
"█ ██42███                                                 ██86███ ██211██      █"
"█ 2024-07 2024-07 2024-08 2024-09 2024-10 2024-11 2024-12 2025-02 2025-03      █"
"█▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄█"
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ Last tab: h | Next Tab: l | Go back: esc                                     │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
